<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <!-- Altura -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardBackgroundColor="#6111DA"
            app:cardCornerRadius="12dp"
            app:cardElevation="140dp"
            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/height_label"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/heightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height_text"
                        android:textAlignment="center"
                        android:textColor="@color/white"

                        android:textSize="24sp" />
                </LinearLayout>

                <com.google.android.material.slider.Slider
                    android:id="@+id/heightSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Heightcontentdescription"
                    android:stepSize="1"
                    android:value="100"
                    android:valueFrom="100"
                    android:valueTo="240"
                    app:labelBehavior="gone"
                    app:tickVisible="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardBackgroundColor="#6111DA"
            app:cardCornerRadius="12dp"
            app:cardElevation="140dp"
            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/heightEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:text="100"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cm"
                        android:textColor="@color/white"
                        android:textSize="24sp"/>

                </LinearLayout>
            </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Peso -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardBackgroundColor="#6111DA"
        app:cardCornerRadius="12dp"
        app:cardElevation="140dp"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weight_label"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/minusButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:contentDescription="@string/minusweightcontentdescription"
                    android:padding="10dp"
                    app:icon="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/weightTextView"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/weight_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/plusButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/plusweightcontentdescription"
                    app:icon="@drawable/ic_add" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <!-- Resultado -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardBackgroundColor="#6111DA"
        app:cardCornerRadius="12dp"
        app:cardElevation="140dp"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"

            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/descripcionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:text="Resultado en texto" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="00.00" />

            <TextView
                android:id="@+id/estadoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:text="Su peso esta bien." />

            <ImageView
                android:id="@+id/imagenImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/obesidad" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/resolve"
        android:textSize="30sp" />

</LinearLayout>